# codegen

./: .gitlab-ci.yml  Cargo.toml  README.md
src/: docs.rs  enum.rs  field.rs  fields.rs  formatter.rs  function.rs  impl.rs  import.rs  lib.rs  module.rs  scope.rs  struct.rs  trait.rs  type.rs  type_alias.rs  type_def.rs  variant.rs
tests/: codegen.rs
