[package]
name = "codegen"
# When releasing to crates.io:
# - Update CHANGELOG.md.
# - Update doc URL.
# - Create "v0.x.x" git tag.
version = "0.2.0"
license = "MIT"
authors = ["Carl Lerche <me@carllerche.com>", "Carter Schultz <carterjschultz@gmail.com>", "Iovoslav Iovchev"]
description = "Library for generating Rust code"
documentation = "https://docs.rs/codegen/0.2.0/codegen"
homepage = "https://github.com/carllerche/codegen"
repository = "https://github.com/carllerche/codegen"
readme = "README.md"
edition = "2021"

[dependencies]
indexmap = "1.0.2"
syn = "1.0.107"
quote = "1.0.23"